Fixing a battery image layout issue with the car list

--- a/scss/cars.scss
+++ b/scss/cars.scss
@@ -116,5 +116,9 @@ car-charge-status svg {
     flex-flow: column;
     justify-content: space-around;
     min-height: 80px;
+    .battery {
+      display: inline-block;
+      width: 30px;
+    }
   }
 }
